syntax = "proto3";

//package com.haha.im.model.protobuf;
option java_outer_classname = "Msg";

message ChatMsg{
    uint64 id = 1;
    uint64 fromId = 2;
    uint64 destId = 3;
    int64 createTime = 4;
    bytes msgBody = 5;
}

message AckMsg {
    uint64 id = 1;
    uint64 fromId = 2;
    uint64 destId = 3;
    int32 msgType = 4;
    int64 createTime = 5;
    uint64 ackMsgId = 6;
}

message InternalMsg{
    uint64 id = 1;
    int32 from = 2;  // 源目标模块类型
    int32 dest = 3;  // 目标模块类型
    int64 createTime = 4;
    int32 msgType = 5;
    bytes msgBody = 6;
}